# mach1py

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
scripts/: example.py
src/mach1py/: __init__.py  mach1file.py
tests/: test_correct.txt  test_mach1file.py  test_no_header.txt
