[metadata]
name = mach1py
version = 1.0.0
description = Python parser for reading Biomomentum Mach-1 data files
author = Turner Jennings
author_email = turner.jennings@outlook.com
url = https://github.com/AminiLabNU/mach1py
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir =
    = src
install_requires =
    pandas

[options.packages.find]
where = src